@@ -1,5 +1,5 @@
 /*
- *   $Id: radvdump.c,v 1.4 2000/11/26 22:17:12 lf Exp $
+ *   $Id: radvdump.c,v 1.5 2000/12/23 22:47:16 lf Exp $
  *
  *   Authors:
  *    Lars Fenneberg		<lf@elemental.net>	 
@@ -21,7 +21,7 @@
 #include <radvd.h>
 #include <pathnames.h>
 
-char usage_str[] = "[-vh] [-f] [-d level]";
+char usage_str[] = "[-vhf] [-d level]";
 
 #ifdef HAVE_GETOPT_LONG
 struct option prog_opt[] = {
@@ -198,9 +198,9 @@ print_ra(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
 	printf("\tAdvHomeAgentFlag: %s\n", 
 		(radvert->nd_ra_flags_reserved & ND_RA_FLAG_HOME_AGENT)?"on":"off");
 
-	printf("\tAdvReachableTime: %lu\n", ntohl(radvert->nd_ra_reachable));
+	printf("\tAdvReachableTime: %lu\n", (unsigned long)ntohl(radvert->nd_ra_reachable));
 
-	printf("\tAdvRetransTimer: %lu\n", ntohl(radvert->nd_ra_retransmit));
+	printf("\tAdvRetransTimer: %lu\n", (unsigned long)ntohl(radvert->nd_ra_retransmit));
 
 	len -= sizeof(struct nd_router_advert);
 
@@ -248,7 +248,7 @@ print_ra(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
 		case ND_OPT_MTU:
 			mtu = (struct nd_opt_mtu *)opt_str;
 
-			printf("\tAdvLinkMTU: %ld\n", ntohl(mtu->nd_opt_mtu_mtu));
+			printf("\tAdvLinkMTU: %lu\n", (unsigned long)ntohl(mtu->nd_opt_mtu_mtu));
 			break;
 		case ND_OPT_PREFIX_INFORMATION:
 			pinfo = (struct nd_opt_prefix_info *) opt_str;
@@ -300,7 +300,7 @@ print_ra(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
 			a_ival = (struct AdvInterval *)opt_str;
 
 			printf("\tAdvIntervalOpt:\n");
-			printf("\t\tAdvInterval: %ld", (ntohl(a_ival->adv_ival)) / 1000);
+			printf("\t\tAdvInterval: %lu", (unsigned long)ntohl(a_ival->adv_ival) / 1000);
 			printf("\n");
 			break;
 		/* Mobile IPv6 ext */
@@ -308,9 +308,9 @@ print_ra(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
 			ha_info = (struct HomeAgentInfo *)opt_str;
 
 			printf("\tAdvHomeAgentInfo:\n");
-			printf("\t\tHomeAgentPreference: %ld", ntohs(ha_info->preference));
+			printf("\t\tHomeAgentPreference: %hu", (unsigned short)ntohs(ha_info->preference));
 			printf("\n");
-			printf("\t\tHomeAgentLifetime: %ld", ntohs(ha_info->lifetime));
+			printf("\t\tHomeAgentLifetime: %hu", (unsigned short)ntohs(ha_info->lifetime));
 			printf("\n");
 			break;
 		case ND_OPT_TARGET_LINKADDR:
@@ -337,7 +337,6 @@ print_ff(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
 	char addr_str[INET6_ADDRSTRLEN];
 	uint8_t *opt_str;
 	int orig_len = len;
-	int i;
 
 	print_addr(&addr->sin6_addr, addr_str);
 	printf("#\n# Configuration generated by radvdump\n");
@@ -352,9 +351,9 @@ print_ff(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
 	printf("\tAdvOtherConfigFlag %s;\n", 
 		(radvert->nd_ra_flags_reserved & ND_RA_FLAG_OTHER)?"on":"off");
 
-	printf("\tAdvReachableTime %lu;\n", ntohl(radvert->nd_ra_reachable));
+	printf("\tAdvReachableTime %lu;\n", (unsigned long)ntohl(radvert->nd_ra_reachable));
 
-	printf("\tAdvRetransTimer %lu;\n", ntohl(radvert->nd_ra_retransmit));
+	printf("\tAdvRetransTimer %lu;\n", (unsigned long)ntohl(radvert->nd_ra_retransmit));
 
 	printf("\tAdvCurHopLimit %d;\n", (int) radvert->nd_ra_curhoplimit);
 
@@ -373,11 +372,9 @@ print_ff(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
 	while (len > 0)
 	{
 		int optlen;
-		struct nd_opt_prefix_info *pinfo;
 		struct nd_opt_mtu *mtu;
 		struct AdvInterval *a_ival;
 		struct HomeAgentInfo *ha_info;
-		char prefix_str[INET6_ADDRSTRLEN];
 
 		if (len < 2)
 		{
@@ -406,7 +403,7 @@ print_ff(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
 		case ND_OPT_MTU:
 			mtu = (struct nd_opt_mtu *)opt_str;
 
-			printf("\tAdvLinkMTU %ld;\n", ntohl(mtu->nd_opt_mtu_mtu));
+			printf("\tAdvLinkMTU %lu;\n", (unsigned long)ntohl(mtu->nd_opt_mtu_mtu));
 			break;
 		case ND_OPT_SOURCE_LINKADDR:
 			printf("\tAdvSourceLLAddress on;\n");
@@ -422,8 +419,8 @@ print_ff(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
 			ha_info = (struct HomeAgentInfo *)opt_str;
 
 			printf("\tAdvHomeAgentInfo on;\n");
-			printf("\tHomeAgentPreference %ld;\n", ntohs(ha_info->preference));
-			printf("\tHomeAgentLifetime %ld;\n", ntohs(ha_info->lifetime));
+			printf("\tHomeAgentPreference %hu;\n", (unsigned short)ntohs(ha_info->preference));
+			printf("\tHomeAgentLifetime %hu;\n", (unsigned short)ntohs(ha_info->lifetime));
 			break;
 		case ND_OPT_TARGET_LINKADDR:
 		case ND_OPT_REDIRECTED_HEADER:
